# agent-coordination-platform

./: .replit  README.md  pnpm-lock.yaml  replit.md
artifacts/api-server/src/routes/: agents.ts  context.ts  dashboard.ts  index.ts  proposals.ts  recovery.ts  routing.ts  sessions.ts  strategies.ts  threats.ts  tournaments.ts
artifacts/platform/src/: App.tsx  index.css
artifacts/platform/src/components/: layout.tsx
artifacts/platform/src/pages/: agents.tsx  context.tsx  dashboard.tsx  proposals.tsx  recovery.tsx  routing.tsx  sessions.tsx  strategies.tsx  threats.tsx  tournaments.tsx
attached_assets/: Pasted-Will-it-s-built-Here-s-what-shipped-8-modules-65-passin_1777066406479.txt
coordination-platform/: SETUP.md  pyproject.toml
coordination-platform/coordination/: __init__.py  api.py
coordination-platform/coordination/engine/: context_router.py  model_router.py  queue_coordinator.py  recovery_router.py  tournament.py
coordination-platform/coordination/intelligence/: agent_proposal.py  meta_learner.py
coordination-platform/coordination/protocols/: a2a.py
coordination-platform/coordination/security/: a2a_interceptor.py
coordination-platform/integrations/aiglos/: __init__.py  conftest.py  test_a2a_security.py  threat_engine_v2.py
coordination-platform/integrations/forge/: 012_coordination_claims.sql
coordination-platform/tests/: test_coordination.py  test_queue_coordinator.py
lib/api-spec/: openapi.yaml  package.json
lib/db/src/schema/: agents.ts  context.ts  index.ts  (+7 more)
scripts/: github-push.mjs  github-update.mjs  seed-threats.mjs  seed.mjs
