[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "coordination-platform"
version = "0.1.0"
description = "Verified, secured, self-improving coordination layer for multi-agent systems"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
